stylesheets/menus.css
.main-menu {
    display: flex;
    flex-direction: column;
}

.main-menu h1 {
    font-size: 40pt;
    margin: 0;
    padding: 0;
}

.main-menu-options button {
    display: flex;
    flex-direction: column;
}

.main-menu button {
    font-size: 24pt;
    border: none;
    margin: 0;
    padding: 0;
}

.main-menu button:hover {
    font-size: 30pt;
}

.main-menu button:active {
    color: gray;
}

.credits h1 {
    font-size: 24pt;
    margin-bottom: 10pt;
}

.credits-container {
    display: flex;
    flex-direction: row;
}

.credits-names-column {
    margin-right: 24pt;
}

.credits-name {
    font-size: 20pt;
    margin-top: 0;
    margin-bottom: 5pt;
}

.credits-roles {
    font-size: 20pt;
    margin-top: 0;
    margin-bottom: 0;
}

.credits button {
    margin-top: 10pt;
    font-size: 20pt;
}

